--- a/content/2022/parse-vs-lookahead.adoc
+++ b/content/2022/parse-vs-lookahead.adoc
@@ -16,7 +16,7 @@ endif::[]
 == Parsing vs. Scanning 
 
 (((Parsing vs Scanning)))
-Consider the following JavaCC construct:
+Consider the following CongoCC construct:
 ----
  ("foo" "bar" "baz")?
 ----
@@ -33,7 +33,7 @@ Well, the difference will be more apparent if we write the above construct in ps
     consume "baz
 ----
 
-When expressed in pseudo-code, we can now see which of the tokens is different. In the above pseudo-code, the "foo" token is mentioned twice and the other two are only mentioned once. One can see this without knowing anything about JavaCC or parsing or programming at all!
+When expressed in pseudo-code, we can now see which of the tokens is different. In the above pseudo-code, the "foo" token is mentioned twice and the other two are only mentioned once. One can see this without knowing anything about CongoCC or parsing or programming at all!
 
 Being first in the token list is what makes the "foo" token different. Unlike the other two, it is actually used twice -- the first time to _scan ahead_ and make a decision, and then, along with the other two tokens, assuming that the "foo" was found, it is _consumed_.
 
@@ -43,23 +43,23 @@ _It cannot fail!_
 
 If, in the previous line, we scanned ahead and saw that the next token is a "foo", we cannot really fail to now _consume_ a "foo". We know that this is the next token coming off the stream, because we just checked! On the other hand, the two following lines could fail. Maybe the token after the "foo" is not a "bar", and even if it is, maybe the one after that is not a "baz".
 
-So the above also illustrates the most basic fact about how JavaCC works:
+So the above also illustrates the most basic fact about how CongoCC works:
 
-_Unless it is somehow overridden, at any *choice point* a JavaCC parser decides by peeking ahead exactly *one* token._
+_Unless it is somehow overridden, at any *choice point* a CongoCC parser decides by peeking ahead exactly *one* token._
 
 In fact, a more precise way of expressing the above point about "foo" being different from the other two tokens would be to say: 
 
 _What is different about "foo" is that it it is at a *choice point* and the other two tokens are not._
 
 (((Parser States, Consuming vs Scanning)))
-You see, developing a complete _conceptual model_ of JavaCC involves understanding this very basic distinction. A JavaCC-generated parser, at any given point, is in one of two states.
+You see, developing a complete _conceptual model_ of CongoCC involves understanding this very basic distinction. A COngoCC-generated parser, at any given point, is in one of two states.
 
 * A "parsing" state in which it is _consuming_ input
 * A "scanning" state in which the parser is _scanning_ input without _consuming_ it.
 
 Note that the above distinction does not just apply to _consuming_ input as opposed to simply _scanning_ it. It is only in the parsing state that we build up the AST and execute whatever other user-defined actions; these don't happen when we are merely scanning ahead.
 
-However, I think that a lot of JavaCC users run into problems because they are continually tripping up over this sort of basic conceptual issue. This may not be so much because the core concept is so difficult, but more because regular parsing and scanahead actually interact in some rather complex, messy ways. 
+However, I think that a lot of people run into problems because they are continually tripping up over this sort of basic conceptual issue. This may not be so much because the core concept is so difficult, but more because regular parsing and scanahead actually interact in some rather complex, messy ways. 
 
 For example, consider the following grammar rule:
 ----
@@ -84,7 +84,7 @@ You see, the third choice, after Foo and Bar is a Java code block and, in a _sca
 
 It could just as well be written: LOOKAHEAD({true})!
 
-FYI, this has been fixed in JavaCC 21 by introducing a new `FAIL` statement which works as expected in either a _scanning_ or _parsing_ state. So the above is preferably written:
+FYI, this has been fixed in CongoCC by introducing a new `FAIL` statement which works as expected in either a _scanning_ or _parsing_ state. So the above is preferably written:
 ----
  FooOrBar :
     Foo
@@ -100,7 +100,7 @@ The above construct does work in a scanning state because if what follows matche
 
 What the above example actually illustrates is a more general concept:
 
-_Generally speaking, the key to writing *robust* grammars in JavaCC is to write grammar rules that work as expected in a *parsing* or a *scanning* state._
+_Generally speaking, the key to writing *robust* grammars in CongoCC is to write grammar rules that work as expected in a *parsing* or a *scanning* state._
 
 Well, at least to the greatest extent possible. I guess the above is also a specific case of the
 https://en.wikipedia.org/wiki/Principle_of_least_astonishment[Principle of Least Surprise].
